# strkit

./: .gitignore  LICENSE  README.md  pyproject.toml
strkit/: __init__.py  core.py
strkit/tests/: test_core.py
